Fixing wave in dark mode

--- a/src/styles/color-mode.css
+++ b/src/styles/color-mode.css
@@ -81,7 +81,3 @@ body.dark .proyect-card__links a:first-child {
 body.dark .proyect-card__links i {
     color: #f1f1f1;
 }
-
-body.dark footer {
-    background-color: #111111;
-}
